--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
     <div class="github-fork-ribbon-wrapper right">
       <div class="github-fork-ribbon">
-        <a href="https://github.com/hugovk/cycle148hki">Fork me on GitHub</a>
+        <a href="https://github.com/cycle148hki/cycle148hki.github.io">Edit me on GitHub</a>
       </div>
     </div>
 
