--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <!--[if IE]><link rel="shortcut icon" href="favicon.ico"><![endif]-->
     <link rel="icon" href="favicon.png">
     <link rel="stylesheet" href="style.css?v=1.0">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.1.1/gh-fork-ribbon.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.1.1/gh-fork-ribbon.min.css" />
     <!--[if lt IE 9]>
-      <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.1.1/gh-fork-ribbon.ie.min.css" />
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.1.1/gh-fork-ribbon.ie.min.css" />
     <![endif]-->
   </head>
   <body>
@@ -49,7 +49,7 @@
           <li>A <a href="http://kartta.hel.fi/?setlanguage=en&e=25498837.34&n=6674152.42&r=26.49&w=*&l=Karttasarja,osaalueet&o=100,100">zoomable map</a> showing each sub-district.
           <li>The same <a href="http://kartta.hel.fi/?setlanguage=en&e=25498837.34&n=6674152.42&r=26.49&w=*&l=Karttasarja,osaalueet&o=30,100">zoomable map</a> with a lighter background.
           <li>And the same <a href="http://kartta.hel.fi/?setlanguage=en&e=25498837.34&n=6674152.42&r=26.49&w=*&l=osaalueet">zoomable map</a> with just the sub-districts.
-          <li>A <a href="https://commons.wikimedia.org/wiki/File:Helsinki_subdivisions-fi.svg">map</a> as an image in different sizes. "Osa-alue" is sub-district.
+          <li>A <a href="map-layers.psd">Photoshop map</a> with layers for the map and borders: useful for filling in visited areas in layers. Here's just the <a href="map-base.png">map base</a> and <a href="map-borders.png">borders</a> as PNG files.          <li>The image above in <a href="map.png">PNG</a> and <a href="map.svg">SVG</a> formats.
           <li>A <a href="http://www.hel.fi/hel2/tietokeskus/julkaisut/pdf/13_04_30_piirijakokartta_2013.pdf">PDF map</a> with a list of areas.
         </ul>
 
