--- a/index.html
+++ b/index.html
@@ -270,6 +270,8 @@
         <!-- SnapWidget -->
         <iframe src="https://snapwidget.com/in/?h=Y3ljbGUxNDhoa2l8aW58MTI1fDR8M3x8bm98NXxub25lfG9uU3RhcnR8eWVzfG5v&ve=240315" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:520px; height:390px"></iframe>
 
+    <P class="center"><img src="bicycle.png" width=27 height=18 alt="Bicycle">
+
     <div class="github-fork-ribbon-wrapper right">
       <div class="github-fork-ribbon">
         <a href="https://github.com/cycle148hki/cycle148hki.github.io">Edit me on GitHub</a>
