--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <P class="center">Collect a cycle-ride in all of Helsinki's sub-districts!
 
       <h2>
-        <a name="rules" class="anchor" href="#rules" aria-hidden="true">
+        <a id="rules" class="anchor" href="#rules" aria-hidden="true">
         <span class="octicon octicon-link"></span></a>
         &#8220;Rules&#8221; in brief
       </h2>
@@ -47,7 +47,7 @@
         </ol>
 
       <h2>
-        <a name="maps" class="anchor" href="#maps" aria-hidden="true">
+        <a id="maps" class="anchor" href="#maps" aria-hidden="true">
         <span class="octicon octicon-link"></span></a>
         Maps
       </h2>
@@ -64,7 +64,7 @@
         </ul>
 
       <h2>
-        <a name="the148" class="anchor" href="#the148" aria-hidden="true">
+        <a id="the148" class="anchor" href="#the148" aria-hidden="true">
         <span class="octicon octicon-link"></span></a>
         The 148 sub-districts
       </h2>
@@ -234,7 +234,7 @@
         </table>
 
       <h2>
-        <a name="other" class="anchor" href="#other" aria-hidden="true">
+        <a id="other" class="anchor" href="#other" aria-hidden="true">
         <span class="octicon octicon-link"></span></a>
         Other considerations
       </h2>
@@ -244,7 +244,7 @@
         <P>Of Helsinki's 148 sub-districts, 142 are reachable without water-crossings. The remaining six require some kind of boat ride before their achievement, so a collection of 142 is a great result. Of the six water crossings, at least some can be achieved using public transport ferries (such as Suomenlinna). It would be great to hear if someone collects 147/148. To collect all 148 is an epic task because of the southernmost areas of the <a href="https://fi.wikipedia.org/wiki/Aluemeri_(Helsinki)">challenge</a>.
 
       <h2>
-        <a name="links" class="anchor" href="#links" aria-hidden="true">
+        <a id="links" class="anchor" href="#links" aria-hidden="true">
         <span class="octicon octicon-link"></span></a>
         Links
       </h2>
@@ -257,7 +257,7 @@
         </ul>
 
       <h2>
-        <a name="twitter" class="anchor" href="#twitter" aria-hidden="true">
+        <a id="twitter" class="anchor" href="#twitter" aria-hidden="true">
         <span class="octicon octicon-link"></span></a>
         Twitter
       </h2>
@@ -266,7 +266,7 @@
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
       <h2>
-        <a name="instagram" class="anchor" href="#instagram" aria-hidden="true">
+        <a id="instagram" class="anchor" href="#instagram" aria-hidden="true">
         <span class="octicon octicon-link"></span></a>
         Instagram
       </h2>
