--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <P>
         <table class="center">
           <tr>
-            <td width="50%">
+            <td style="width:50%;">
             <ul>
               <li>010 Kruununhaka <i>(Kronohagen)</i>
               <li>020 Kluuvi <i>(Gloet)</i>
@@ -152,7 +152,7 @@
               <li>351 Paloheinä <i>(Svedängen)</i>
             </ul>
             </td>
-            <td width="50%">
+            <td style="width:50%;">
             <ul>
               <li>352 Torpparinmäki <i>(Torparbacken)</i>
               <li>353 Tuomarinkartano <i>(Domargård)</i>
