--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </script>
   </head>
   <body>
-    <h1><img src="logo.png" alt="Project #cycle148HKI" width=300 height=102></h1>
+    <h1 id="top"><img src="logo.png" alt="Project #cycle148HKI" width=300 height=102></h1>
 
       <P class="center">Collect a cycle-ride in all of Helsinki's sub-districts!
 
@@ -274,7 +274,7 @@
         <!-- SnapWidget -->
         <iframe src="https://snapwidget.com/in/?h=Y3ljbGUxNDhoa2l8aW58MTI1fDR8M3x8bm98NXxub25lfG9uU3RhcnR8eWVzfG5v&amp;ve=240315" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:520px; height:390px"></iframe>
 
-    <P class="center"><img src="bicycle.png" width=27 height=18 alt="Bicycle">
+    <P class="center"><a href="#top"><img src="bicycle.png" width=27 height=18 alt="Bicycle"></a>
 
     <div class="github-fork-ribbon-wrapper right">
       <div class="github-fork-ribbon">
