--- a/index.html
+++ b/index.html
@@ -266,6 +266,14 @@
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
       <h2>
+        <a id="flickr" class="anchor" href="#flickr" aria-hidden="true">
+        <span class="octicon octicon-link"></span></a>
+        Flickr
+      </h2>
+
+        <iframe id='iframe' src='https://flickrit.com/slideshowholder.php?height=520&width=520&size=medium&keyword=cycle148HKI&caption=true&theme=1&thumbnails=1&transition=0&layoutType=fixed&sort=0' scrolling='no' frameborder='0' width='520' height='530'></iframe>
+
+      <h2>
         <a id="instagram" class="anchor" href="#instagram" aria-hidden="true">
         <span class="octicon octicon-link"></span></a>
         Instagram
