--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <!--[if lt IE 9]>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.1.1/gh-fork-ribbon.ie.min.css" />
     <![endif]-->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@hugovk" />
+    <meta name="twitter:title" content="Project #cycle148HKI" />
+    <meta name="twitter:description" content="Collect a cycle-ride in all of Helsinki's sub-districts!" />
+    <meta name="twitter:image" content="https://cycle148hki.github.io/logo.png" />
       <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
