--- a/map.html
+++ b/map.html
@@ -2,14 +2,15 @@
 <html>
 <head>
 <meta charset=utf-8 />
-<title>KML Data</title>
+<title>Helsinki sub-districts</title>
 <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 <script src='https://api.tiles.mapbox.com/mapbox.js/v2.2.1/mapbox.js'></script>
 <link href='https://api.tiles.mapbox.com/mapbox.js/v2.2.1/mapbox.css' rel='stylesheet' />
+<script src='https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-pip/v0.1.0/leaflet-pip.min.js'></script>
 <style>
   body { margin:0; padding:0; }
   #map { position:absolute; top:0; bottom:0; width:100%; }
-.ui-button {
+  .ui-button {
   background:#3887BE;
   color:#FFF;
   display:block;
@@ -26,6 +27,19 @@
   .ui-button:hover {
     background:#3074a4;
     color:#fff;
+  }
+  .label {
+  position:absolute;
+  top:10px;
+  right:10px;
+  z-index:1000;
+  }
+  .label strong {
+    background:#404040;
+    color:#fff;
+    display:block;
+    padding:10px;
+    border-radius:3px;
     }
 </style>
 </head>
@@ -34,11 +48,13 @@
 
 <div id='map'></div>
 <a href='#' id='geolocate' class='ui-button'>Find me</a>
+<div id='label' class='label'></div>
 
 <script>
 L.mapbox.accessToken = 'pk.eyJ1IjoiaHVnb3ZrIiwiYSI6ImY2MjkwNGNlMzUwNDM3ZGQ1NGJkNjM2Y2IwYjYyYTE5In0.EB0cLP2_gYi4pxYAiUn6Mg';
 var geolocate = document.getElementById('geolocate');
 var map = L.mapbox.map('map', 'mapbox.streets');
+map.setView(new L.LatLng(60.1708, -24.9375), 11);
 
 var myLayer = L.mapbox.featureLayer().addTo(map);
 
@@ -50,9 +66,9 @@ var myLayer = L.mapbox.featureLayer().addTo(map);
 
 // Internally this uses the toGeoJSON library to decode the KML file
 // into GeoJSON
-var runLayer = omnivore.kml('subdistricts.kml')
+var subdistricts = omnivore.kml('subdistricts.kml')
     .on('ready', function() {
-        map.fitBounds(runLayer.getBounds());
+        map.fitBounds(subdistricts.getBounds());
     })
     .addTo(map);
 
@@ -74,7 +90,15 @@ if (!navigator.geolocation) {
 // Once we've got a position, zoom and center the map
 // on it, and add a single marker.
 map.on('locationfound', function(e) {
-    map.fitBounds(e.bounds);
+    var results = leafletPip.pointInLayer(e.latlng, subdistricts);
+    if (results.length) {
+      console.log(results[0].feature.properties.name);
+      map.fitBounds(results[0]);
+      label.innerHTML = '<strong>' + results[0].feature.properties.name + '</strong>';
+    } else {
+      map.fitBounds(e.bounds);
+      label.innerHTML = '';
+    }
 
     myLayer.setGeoJSON({
         type: 'Feature',
