Twitter card metadata

--- a/map.html
+++ b/map.html
@@ -9,6 +9,11 @@
     <script src='https://api.tiles.mapbox.com/mapbox.js/v2.2.1/mapbox.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox.js/v2.2.1/mapbox.css' rel='stylesheet' />
     <script src='https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-pip/v0.1.0/leaflet-pip.min.js'></script>
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@hugovk" />
+    <meta name="twitter:title" content="Project #cycle148HKI" />
+    <meta name="twitter:description" content="Collect a cycle-ride in all of Helsinki's sub-districts!" />
+    <meta name="twitter:image" content="https://cycle148hki.github.io/logo.png" />
     <style>
       body {
         font-family: Arial;
